# QCPPlotting

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  aboutprogram.cpp  aboutprogram.h  analyzediffractiondatadron2.cpp  analyzediffractiondatadron2.h  chartsettings.cpp  chartsettings.h  chartwidget.cpp  chartwidget.h  consts.h  dialogs.cpp  dialogs.h  fontwidget.cpp  fontwidget.h  global.h  logicalmethods.cpp  logicalmethods.h  main.cpp  mainwindow.cpp  mainwindow.h  move legend  pushbuttoncolorpicker.cpp  pushbuttoncolorpicker.h  resources.qrc  separatorwidgets.cpp  separatorwidgets.h  spacer.cpp  spacer.h  structs.h  tablewidget.cpp  tablewidget.h  tv
translations/: ru_RU.ts
